Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for current svn repository
==================================
 
 o #16471 contrib: incompatible interface change in I_ResultCb: needed to make alter table recreate the 
          trigger on the master side of a replication

 o #16469 removed double spanning of poll timer when going from ALIVE to POLLING
 
 o #16467 Replication: fixed in trigger timestamp is always using '.': was using locale punctuator
          resulting in an exception on the writing side. Also made writer more tollerant (would 
          handle a comma now)

 o #16457 Continue loading sessions from persistence even if one fails (e.g. because of changed authentication)
          TODO: Implement generic approach to handle such sessions (security plugin should grant access if coming
	  from persistent store).

 o #16449 JMX control
          - Added SessionInfo getCbQueueBytes() and getCbQueueBytesCache()
            These are the bytes of the refence objects only (not containing the message itself)
          - Fixed allowedToReconfigureTopicAndFixWrongLimits() typo at: if (currentMaxEntries > historyProps.getMaxEntries())
          - Added reportMemoryOverview() and reportMemoryOverviewToFile(String file) on node level
          - Added I_Map: getNumOfCachedEntries and getNumOfCachedBytes
          Configuration of 
             persistence/msgUnitStore/maxEntriesCache
             persistence/msgUnitStore/maxEntries
             persistence/msgUnitStore/maxBytesCache
             persistence/msgUnitStore/maxBytes
            and the history queue equivalents
            is now enforced on restart of xmlBlaster during persistent topic recovery
          Bugfix of checkConsistency(I_Map, fixIt, reportFileName) which reported
          leaks which probably weren't.


 o #16444 removed synchronized in CacheQueueInterceptorPlugin.clear since it caused a deadlock