@@ -3,6 +3,9 @@ The "#99999" numbers are Subversion revision numbers.
 
 Changes for current svn repository
 ==================================
+
+ o #16493 Dead lock fix between callback ping and reconnect thread (reported by Xavier)
+ 	  Now all threads enter the syncs hierarchical over the DispatchManager
  
  o #16471 contrib: incompatible interface change in I_ResultCb: needed to make alter table recreate the 
           trigger on the master side of a replication
